# LumiPDF

./: .gitignore  Package.appxmanifest  README.md  index.html  package-lock.json  package.json  privacy.html  tsconfig.json  vercel.json  vite.config.ts
.winapp/include/: .cppwinrt.rsp  WindowsAppSDK-VersionInfo.cs
.winapp/include/winrt/: Microsoft.Graphics.DirectX.h  Microsoft.Graphics.Display.h  Microsoft.Graphics.Imaging.h  Microsoft.Security.Authentication.OAuth.h  Microsoft.UI.Composition.Core.h  Microsoft.UI.Composition.Diagnostics.h  Microsoft.UI.Composition.Effects.h  Microsoft.UI.Composition.Interactions.h  Microsoft.UI.Composition.Scenes.h  Microsoft.UI.Composition.SystemBackdrops.h  Microsoft.UI.Composition.h  Microsoft.UI.Content.h  Microsoft.UI.Dispatching.h  Microsoft.UI.Input.DragDrop.h  Microsoft.UI.Input.Interop.h  Microsoft.UI.Input.h  Microsoft.UI.System.h  Microsoft.UI.Text.h  Microsoft.UI.Windowing.h  Microsoft.UI.Xaml.Automation.Peers.h  Microsoft.UI.Xaml.Automation.Provider.h  Microsoft.UI.Xaml.Automation.Text.h  Microsoft.UI.Xaml.Automation.h  Microsoft.UI.Xaml.Controls.AnimatedVisuals.h  Microsoft.UI.Xaml.Controls.Primitives.h  Microsoft.UI.Xaml.Data.h  Microsoft.UI.Xaml.Documents.h  Microsoft.UI.Xaml.Hosting.h  (+388 more)
downloads/: LumiPDF.msi  LumiPDF_0.1.0_x64.msix
scripts/: package-msix.ps1  sync-download-artifact.mjs  sync-pages-download.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/templates/: themes.ts
store-package/: LumiPDF_0.1.0_x64.msix
(+1265 files in other folders)
